# prompt-guard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
data/: download_datasets.py  latency_check.py  spot_test.py  spot_test_results.json  synthetic_results.json
data/labelled/: attacks.jsonl  benign.jsonl
data/prompts/: report_v1.txt  tier1_v1.txt  tier2_v1.txt
data/synthetic/: all_attacks.jsonl  benign_edge_cases.jsonl  context_manipulation.jsonl  direct_jailbreak.jsonl  indirect_injection.jsonl  information_extraction.jsonl  payload_smuggling.jsonl  role_hijacking.jsonl
demo-backend/: main.py  requirements.txt
eval/: attacks_testing.jsonl  benign_testing.jsonl  eval.py  generate_synthetic.py  run_synthetic.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/demo-site/: DemoApp.css  DemoApp.jsx
frontend/src/services/: api.js
frontend/src/widget/: AttackDistribution.jsx  Feed.jsx  SeverityDistribution.jsx  Stats.jsx  Tabs.jsx  TierStats.jsx  VerdictBreakdown.jsx  Widget.jsx  WidgetHeader.jsx  mock-data.jsx  widget.css
proxy/: Dockerfile  api.py  requirements.txt
proxy/detection/: crusoe_tier.py
scripts/: check_repo.py
sdk/: README.md  pyproject.toml
sdk/promptguard/: __init__.py
