[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "promptguard"
version = "0.1.0"
description = "Prompt injection firewall for AI applications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/tiernaco1/prompt-guard"
