[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptguard-firewall"
version = "0.1.1"
description = "Prompt injection firewall for AI applications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/tiernaco1/prompt-guard"
